--- a/packages/site/src/index.scss
+++ b/packages/site/src/index.scss
@@ -103,6 +103,7 @@ html {
   height: 34px;
   line-height: 32px;
   border-radius: 2px;
+  color: #333333;
   &:hover {
     color: #fff;
     border-color: transparent;
