add search api and search style

--- a/packages/site/src/index.scss
+++ b/packages/site/src/index.scss
@@ -469,6 +469,10 @@ a:focus {
         }
       }
     }
+    .navbar-end{
+      display: flex;
+      align-items: center;
+    }
     .navbar-search {
       position: relative;
       .search {
