footer more mobile friendly display

--- a/packages/site/src/index.scss
+++ b/packages/site/src/index.scss
@@ -842,9 +842,8 @@ a:focus {
     display: flex;
     flex: 1;
   }
-
-  ul li {
-    margin-right: 32px;
+  li {
+    margin-right: 3vw;
   }
 
   .chainx-code-wrapper {
