Add empty placeholder for no extrisnci hash or no signer account

--- a/packages/site/src/index.scss
+++ b/packages/site/src/index.scss
@@ -1190,6 +1190,10 @@ a:focus {
   }
 }
 
+.ant-table-cell .ant-empty.ant-empty-normal {
+  margin: 0;
+}
+
 
 @media (min-width: 320px) and (max-width: 1024px) {
   .container {
