Show empty placeholder when no validator name

--- a/packages/site/src/index.scss
+++ b/packages/site/src/index.scss
@@ -1194,6 +1194,10 @@ a:focus {
   margin: 0;
 }
 
+td .ant-empty.ant-empty-normal {
+  margin: 0;
+}
+
 
 @media (min-width: 320px) and (max-width: 1024px) {
   .container {
